javascript logic in progress

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 </form>
                 <button id="wildShapeButton" type="button">Does It Work?</button>
             </section>
+
+            <section id="answerData">
+            </section>
         </main>
 
 		<script type="text/javascript" src="js/main.js"></script>
