css style updates

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 	<body>
 		<main>
-            <section>
+            <section id="intro">
                 <h1>Dungeons & Druids</h1>
-                <p>Dungeons & Dragons resources for the Druid class.</p>
+                <p>Dungeons & Dragons 5e resources for the Druid class.</p>
             </section>
 
-            <section>
+            <section id="wildShapeChecker">
                 <h2>Can I Wild Shape Into This?</h2>
                 <p>Tell us your subclass and level, and we'll let you know if you can wild shape into your monster!</p>
 
