--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="Dungeons & Dragons 5e resources for the Druid class.">
+    	<meta name="keywords" content="dungeons and dragons, druid class, wild shape">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Dungeons & Druids</title>
 
